# LiftJournal

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_auth.py  003_cycles.py  004_cycle_runs.py  005_cycle_exercise_id.py  006_cycle_run_completed_at.py  007_user_theme.py  008_planned_workouts.py  009_recurrence.py  010_exercise_set_failed.py  011_user_achievements.py  012_user_birth_date.py  013_user_follows.py  014_workout_likes_comments.py  015_notifications.py
backend/app/: auth.py  config.py  schemas.py  seed.py
backend/app/api/: schemas.py
backend/app/core/: database.py  security.py  ws_manager.py
backend/app/db/: models.py
backend/app/domain/: models.py
backend/app/repositories/: achievements.py  cycle.py  cycle_run.py  exercise.py  notifications.py  planned_workout.py  social.py  user.py  workout.py
backend/app/routers/: auth.py  cycle_runs.py  cycles.py  exercises.py  user.py  workouts.py
backend/app/services/: achievements.py  auth.py  cycle.py  cycle_run.py  exercise.py  notifications.py  planned_workout.py  social.py  user.py  workout.py
backend/tests/: conftest.py
backend/tests/test_api/: conftest.py  test_auth.py  test_cycle_runs.py  test_cycles.py  test_exercises.py  test_users.py  test_workouts.py
backend/tests/test_core/: test_security.py
backend/tests/test_repositories/: test_cycle_repository.py  test_cycle_run_repository.py  test_user_repository.py  (+2 more)
(+92 files in other folders)
