[tool.poetry]
name = "gym-backend"
version = "0.1.0"
description = "LiftJournal API — gym diary backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.31"
pydantic = "^2.12"
pydantic-settings = "^2.13"
alembic = "^1.18"
uvicorn = {version = "^0.41", extras = ["standard"]}
uvloop = "^0.22"
python-dotenv = "^1.2"
bcrypt = "^4.2"
python-jose = {version = "^3.3", extras = ["cryptography"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
